--- a/v2/help.html
+++ b/v2/help.html
@@ -21,15 +21,16 @@ p{display:inline-block; line-height: 2;}
 2. Set all the settings according to PART V<br>
 3. Run App_Name.exe file<br>
 </p><hr><h2>PART III: MAIN MENU</h2><p>
-<b>1. ADD A USER</b><br>
-&emsp;1.1. This will allow you to add a new user to the database by filling a form<br>
+<b>1. PRINT YELLOW LABEL</b><br>
+&emsp;1.1. This will allow you to add a new LOT NUMBER to the database by filling a form<br>
 &emsp;1.2. At the end of the form press Y to submit the form and the new user will be added to the database<br>
-<b>2. EDIT A USER</b><br>
-&emsp;2.1. This will allow you to edit an existing user by filling a form<br>
-&emsp;2.2. At the end of the form press Y to submit the form and the user information will be edited<br>
-<b>3. DELETE A USER</b><br>
-&emsp;3.1. This will allow you to delete an existing user<br>
-&emsp;3.2. Insert a valid user ID number to delete the user<br>
+&emsp;1.3. When form is successfully submitted the application will open bar tender to print a yellow label<br>
+<b>2. DELETE A USER</b><br>
+&emsp;2.1. This will allow you to delete an existing user<br>
+&emsp;2.2. Insert a valid user ID number to delete the user<br>
+<b>3. EDIT A USER</b><br>
+&emsp;3.1. This will allow you to edit an existing user by filling a form<br>
+&emsp;3.2. At the end of the form press Y to submit the form and the user information will be edited<br>
 <b>4. EXPORT</b><br>
 &emsp;4.1. This function allowes you to save your current database as a csv file<br>
 <b>5. IMPORT</b><br>
